Fix the spacing of checkboxes/radio buttons

--- a/nova/resources/views/design/less/base.style.less
+++ b/nova/resources/views/design/less/base.style.less
@@ -139,7 +139,7 @@ dl {
 .checkbox-inline input[type=checkbox],
 .radio input[type=radio],
 .radio-inline input[type=radio] {
-	margin-top: .9rem;
+	margin-top: .8rem;
 }
 
 .help-block {
@@ -184,6 +184,9 @@ dl {
 	font-size: @font-size-sm;
 }
 
+/**
+ * SweetAlert
+ */
 .sweet-alert {
 	font-family: @font;
 
@@ -236,6 +239,9 @@ dl {
 	}
 }
 
+/**
+ * UIKit Updates
+ */
 .uk-nestable {
 	.uk-nestable-item {
 		.uk-nestable-panel {
